# hello-world-aws-lambda

./: Cargo.toml
