[package]
name = "aws-lambda-rust"
version = "0.1.0"
authors = ["Calvin Brown <calvinb085@icloud.com>"]
edition = "2018"
autobins = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"